--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -65,7 +65,7 @@
         android:selectAllOnFocus="true"
         android:singleLine="true"
         android:textAlignment="center"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -84,7 +84,7 @@
         android:selectAllOnFocus="true"
         android:singleLine="true"
         android:textAlignment="center"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,7 +95,7 @@
         style="@android:style/Widget.Material.Button"
         android:layout_width="300dp"
         android:layout_height="95dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="35dp"
         android:elevation="0dp"
         android:fontFamily="monospace"
         android:text="@string/let_it_bet"
@@ -105,5 +105,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/insName3" />
+
+    <TextView
+        android:id="@+id/txtVwInfo"
+        android:layout_width="250dp"
+        android:layout_height="20dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/info_addiction"
+        android:textAlignment="center"
+        android:textSize="8sp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
