--- a/app/src/main/res/layout-land/activity_register.xml
+++ b/app/src/main/res/layout-land/activity_register.xml
@@ -11,26 +11,25 @@
         android:id="@+id/txtVwUpRegister"
         android:layout_width="480dp"
         android:layout_height="40dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginBottom="45dp"
         android:clickable="false"
         android:fontFamily="monospace"
-        android:text="@string/insert_your_names"
+        android:text="@string/insert_username"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textAppearance="@android:style/TextAppearance.Material.Title"
         android:textSize="30sp"
         android:textStyle="italic"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/insName1"
+        app:layout_constraintBottom_toTopOf="@+id/insName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/txtVwSubUpRegister"
         android:layout_width="400dp"
         android:layout_height="20dp"
-        android:text="@string/insert_your_name_sub"
+        android:text="@string/insert_username_sub"
         android:textAlignment="center"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,27 +38,11 @@
         app:layout_constraintTop_toBottomOf="@+id/txtVwUpRegister" />
 
     <EditText
-        android:id="@+id/insName1"
-        android:layout_width="250dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="5dp"
-        android:ems="10"
-        android:hint="@string/type_name_player1"
-        android:inputType="textPersonName"
-        android:selectAllOnFocus="true"
-        android:singleLine="true"
-        android:textAlignment="center"
-        android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/insName2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <EditText
-        android:id="@+id/insName2"
+        android:id="@+id/insName"
         android:layout_width="250dp"
         android:layout_height="40dp"
         android:ems="10"
-        android:hint="@string/type_name_player2"
+        android:hint="@string/type_username"
         android:inputType="textPersonName"
         android:selectAllOnFocus="true"
         android:singleLine="true"
@@ -69,30 +52,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.48000002" />
-
-    <EditText
-        android:id="@+id/insName3"
-        android:layout_width="250dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="5dp"
-        android:ems="10"
-        android:hint="@string/type_name_player3"
-        android:inputType="textPersonName"
-        android:selectAllOnFocus="true"
-        android:singleLine="true"
-        android:textAlignment="center"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/insName2" />
+        app:layout_constraintVertical_bias="0.457" />
 
     <Button
-        android:id="@+id/btnGoToRace"
+        android:id="@+id/btnGoTo"
         style="@android:style/Widget.Material.Button"
         android:layout_width="300dp"
         android:layout_height="60dp"
+        android:layout_marginTop="32dp"
         android:elevation="0dp"
         android:fontFamily="monospace"
         android:text="@string/let_it_bet"
@@ -101,7 +68,7 @@
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/insName3" />
+        app:layout_constraintTop_toBottomOf="@+id/insName" />
 
     <TextView
         android:id="@+id/txtVwInfo"
