--- a/app/src/main/res/layout/activity_race.xml
+++ b/app/src/main/res/layout/activity_race.xml
@@ -11,21 +11,20 @@
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="300dp"
         android:layout_height="30dp"
-        android:layout_marginTop="45dp"
         android:indeterminate="false"
         android:max="1000"
         android:progressTint="@android:color/black"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <ProgressBar
         android:id="@+id/progressBar2"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="300dp"
         android:layout_height="30dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:indeterminate="false"
         android:max="1000"
         android:progressTint="@android:color/black"
@@ -40,7 +39,7 @@
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="300dp"
         android:layout_height="30dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:indeterminate="false"
         android:max="1000"
         android:progressTint="@android:color/black"
@@ -63,47 +62,37 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/progressBar3" />
 
+    <TextView
+        android:id="@+id/txtNm1"
+        android:layout_width="80dp"
+        android:layout_height="35dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/too_much_security"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/btnPlus1"
+        app:layout_constraintEnd_toStartOf="@+id/txtNm2" />
+
     <Button
         android:id="@+id/btnPlus1"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="45dp"
         android:text="@string/plus"
         android:textAlignment="center"
-        app:layout_constraintEnd_toStartOf="@+id/btnPlus2"
-        app:layout_constraintTop_toBottomOf="@+id/btnStart" />
-
-    <Button
-        android:id="@+id/btnMinus1"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginEnd="24dp"
-        android:text="@string/minus"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toStartOf="@+id/btnMinus2"
-        app:layout_constraintTop_toBottomOf="@+id/val1" />
-
-    <TextView
-        android:id="@+id/txtNm1"
-        android:layout_width="80dp"
-        android:layout_height="20dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="8dp"
-        android:text="Name1"
-        android:textAlignment="center"
-        android:textStyle="bold"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/btnPlus1"
-        app:layout_constraintEnd_toStartOf="@+id/txtNm2"
+        app:layout_constraintEnd_toStartOf="@+id/btnPlus2"
         app:layout_constraintTop_toBottomOf="@+id/btnStart" />
 
     <TextView
         android:id="@+id/val1"
-        android:layout_width="70dp"
+        android:layout_width="80dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginTop="8dp"
+        android:singleLine="true"
         android:text="0.00"
         android:textAlignment="center"
         android:textAllCaps="false"
@@ -113,34 +102,21 @@
         app:layout_constraintTop_toBottomOf="@+id/btnPlus1" />
 
     <Button
-        android:id="@+id/btnPlus2"
+        android:id="@+id/btnMinus1"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginTop="32dp"
-        android:text="@string/plus"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnStart" />
-
-    <Button
-        android:id="@+id/btnMinus2"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_marginEnd="24dp"
         android:text="@string/minus"
         android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/val2" />
+        android:visibility="visible"
+        app:layout_constraintEnd_toStartOf="@+id/btnMinus2"
+        app:layout_constraintTop_toBottomOf="@+id/val1" />
 
     <TextView
         android:id="@+id/txtNm2"
         android:layout_width="80dp"
         android:layout_height="20dp"
-        android:layout_marginTop="8dp"
-        android:text="Name2"
+        android:text="@string/human_hate"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textStyle="bold"
@@ -148,14 +124,27 @@
         app:layout_constraintBottom_toTopOf="@+id/btnPlus2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnPlus2"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="45dp"
+        android:text="@string/plus"
+        android:textAlignment="center"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnStart" />
 
     <TextView
         android:id="@+id/val2"
-        android:layout_width="70dp"
+        android:layout_width="80dp"
         android:layout_height="50dp"
         android:layout_marginTop="8dp"
+        android:singleLine="true"
         android:text="0.00"
         android:textAlignment="center"
         android:textAllCaps="false"
@@ -167,15 +156,55 @@
         app:layout_constraintTop_toBottomOf="@+id/btnPlus2" />
 
     <Button
+        android:id="@+id/btnMinus2"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:text="@string/minus"
+        android:textAlignment="center"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/val2" />
+
+    <TextView
+        android:id="@+id/txtNm3"
+        android:layout_width="80dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="16dp"
+        android:text="@string/industry_4_0"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/btnPlus3"
+        app:layout_constraintStart_toEndOf="@+id/txtNm2" />
+
+    <Button
         android:id="@+id/btnPlus3"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="45dp"
         android:text="@string/plus"
         android:textAlignment="center"
+        android:visibility="visible"
         app:layout_constraintStart_toEndOf="@+id/btnPlus2"
         app:layout_constraintTop_toBottomOf="@+id/btnStart" />
+
+    <TextView
+        android:id="@+id/val3"
+        android:layout_width="80dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:singleLine="true"
+        android:text="0.00"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textSize="30sp"
+        android:visibility="visible"
+        app:layout_constraintStart_toEndOf="@+id/val2"
+        app:layout_constraintTop_toBottomOf="@+id/btnPlus3" />
 
     <Button
         android:id="@+id/btnMinus3"
@@ -184,36 +213,9 @@
         android:layout_marginStart="24dp"
         android:text="@string/minus"
         android:textAlignment="center"
+        android:visibility="visible"
         app:layout_constraintStart_toEndOf="@+id/btnMinus2"
         app:layout_constraintTop_toBottomOf="@+id/val3" />
-
-    <TextView
-        android:id="@+id/txtNm3"
-        android:layout_width="80dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:text="Name3"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/btnPlus3"
-        app:layout_constraintStart_toEndOf="@+id/txtNm2"
-        app:layout_constraintTop_toBottomOf="@+id/btnStart" />
-
-    <TextView
-        android:id="@+id/val3"
-        android:layout_width="70dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:text="0.00"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textSize="30sp"
-        android:visibility="visible"
-        app:layout_constraintStart_toEndOf="@+id/val2"
-        app:layout_constraintTop_toBottomOf="@+id/btnPlus3" />
 
     <Button
         android:id="@+id/btnBack"
@@ -238,5 +240,17 @@
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="290dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="16dp"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
