--- a/app/src/main/res/layout/activity_race.xml
+++ b/app/src/main/res/layout/activity_race.xml
@@ -11,7 +11,7 @@
         android:layout_width="290dp"
         android:layout_height="30dp"
         android:layout_marginTop="16dp"
-        android:text="TextView"
+        android:text="Info Race"
         android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
