--- a/app/src/main/res/layout-land/activity_race.xml
+++ b/app/src/main/res/layout-land/activity_race.xml
@@ -78,84 +78,86 @@
         android:id="@+id/txtNm1"
         android:layout_width="80dp"
         android:layout_height="35dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="40dp"
         android:text="@string/too_much_security"
         android:textAlignment="center"
         android:textStyle="bold"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/btnPlus1"
-        app:layout_constraintEnd_toStartOf="@+id/txtNm2" />
+        app:layout_constraintEnd_toStartOf="@+id/progressBar1"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnPlus1"
         android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginTop="45dp"
+        android:layout_height="50dp"
         android:text="@string/plus"
         android:textAlignment="center"
         android:visibility="visible"
-        app:layout_constraintEnd_toStartOf="@+id/btnPlus2"
-        app:layout_constraintTop_toBottomOf="@+id/btnStart" />
+        app:layout_constraintEnd_toStartOf="@+id/progressBar1"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtNm1" />
 
     <TextView
         android:id="@+id/val1"
         android:layout_width="80dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="8dp"
         android:singleLine="true"
         android:text="0.0"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textSize="30sp"
         android:visibility="visible"
-        app:layout_constraintEnd_toStartOf="@+id/val2"
+        app:layout_constraintEnd_toStartOf="@+id/progressBar3"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnPlus1" />
 
     <Button
         android:id="@+id/btnMinus1"
         android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginEnd="24dp"
+        android:layout_height="50dp"
         android:text="@string/minus"
         android:textAlignment="center"
         android:visibility="visible"
-        app:layout_constraintEnd_toStartOf="@+id/btnMinus2"
+        app:layout_constraintEnd_toStartOf="@+id/btnStart"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/val1" />
 
     <TextView
         android:id="@+id/txtNm2"
         android:layout_width="80dp"
         android:layout_height="20dp"
+        android:layout_marginTop="16dp"
         android:text="@string/human_hate"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textStyle="bold"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/btnPlus2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/btnPlus2"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="45dp"
-        android:text="@string/plus"
-        android:textAlignment="center"
-        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnStart" />
+
+    <Button
+        android:id="@+id/btnPlus2"
+        android:layout_width="70dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/plus"
+        android:textAlignment="center"
+        android:visibility="visible"
+        app:layout_constraintEnd_toStartOf="@+id/val2"
+        app:layout_constraintTop_toTopOf="@+id/txtNm2" />
 
     <TextView
         android:id="@+id/val2"
         android:layout_width="80dp"
         android:layout_height="50dp"
-        android:layout_marginTop="8dp"
         android:singleLine="true"
         android:text="0.0"
         android:textAlignment="center"
@@ -165,68 +167,71 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnPlus2" />
+        app:layout_constraintTop_toBottomOf="@+id/txtNm2" />
 
     <Button
         android:id="@+id/btnMinus2"
         android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:text="@string/minus"
         android:textAlignment="center"
         android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/val2" />
+        app:layout_constraintStart_toEndOf="@+id/val2"
+        app:layout_constraintTop_toTopOf="@+id/txtNm2" />
 
     <TextView
         android:id="@+id/txtNm3"
         android:layout_width="80dp"
         android:layout_height="20dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginTop="40dp"
         android:text="@string/industry_4_0"
         android:textAlignment="center"
         android:textStyle="bold"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/btnPlus3"
-        app:layout_constraintStart_toEndOf="@+id/txtNm2" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/txtInfo"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnPlus3"
         android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="45dp"
+        android:layout_height="50dp"
         android:text="@string/plus"
         android:textAlignment="center"
         android:visibility="visible"
-        app:layout_constraintStart_toEndOf="@+id/btnPlus2"
-        app:layout_constraintTop_toBottomOf="@+id/btnStart" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/progressBar1"
+        app:layout_constraintTop_toBottomOf="@+id/txtNm3" />
 
     <TextView
         android:id="@+id/val3"
         android:layout_width="80dp"
         android:layout_height="50dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
         android:singleLine="true"
         android:text="0.0"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textSize="30sp"
         android:visibility="visible"
-        app:layout_constraintStart_toEndOf="@+id/val2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/progressBar3"
         app:layout_constraintTop_toBottomOf="@+id/btnPlus3" />
 
     <Button
         android:id="@+id/btnMinus3"
         android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="24dp"
+        android:layout_height="50dp"
         android:text="@string/minus"
         android:textAlignment="center"
         android:visibility="visible"
-        app:layout_constraintStart_toEndOf="@+id/btnMinus2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/btnStart"
         app:layout_constraintTop_toBottomOf="@+id/val3" />
 
     <Button
