--- a/app/src/main/res/layout/activity_race.xml
+++ b/app/src/main/res/layout/activity_race.xml
@@ -6,11 +6,19 @@
     android:layout_height="match_parent"
     tools:context="com.example.marco.racingsnai.ActivityRace">
 
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="302dp"
+        android:layout_height="250dp"
+        tools:layout_editor_absoluteX="149dp"
+        tools:layout_editor_absoluteY="461dp">
+
+    </android.support.constraint.ConstraintLayout>
+
     <TextView
         android:id="@+id/txtInfo"
         android:layout_width="290dp"
         android:layout_height="30dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:text="@string/info_game"
         android:textAlignment="center"
         android:textStyle="bold"
